# cpp_base

./: CMakeLists.txt  README.md  cppbase.h
socket/: socket.cpp  socket.h  tcpserversocket.h  tcpsocket.cpp  tcpsocket.h
tools/: cppassert.h  macros.h  stringtool.cpp  stringtool.h
